# nolan

./: .gitignore  .rusty-hook.toml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
benches/: benchmark_jets.rs  benchmark_linalg.rs  benchmark_statistics.rs
dev/bench/: data.js
docs/: crates.js  help.html  katex-header.html  settings.html  src-files.js
docs/nolan/: all.html  fn.version.html  index.html  sidebar-items.js
docs/nolan/impls/: index.html  sidebar-items.js
docs/nolan/impls/f64_traits/: index.html
docs/nolan/impls/jet_math/: index.html
docs/nolan/impls/jet_ops/: index.html
docs/nolan/impls/jet_traits/: index.html
docs/nolan/jets/: fn.hess_index.html  fn.hess_size.html  index.html  sidebar-items.js  struct.Jet1.html  struct.Jet2.html  type.Dual.html  type.HyperDual.html
docs/nolan/traits/: index.html  sidebar-items.js  trait.AutoDiff.html  trait.Differentiable.html  trait.DifferentiableMath.html  trait.FirstOrder.html  trait.HigherOrder.html  trait.SecondOrder.html
docs/search.index/: root.js
docs/search.index/crateNames/: 0f7b53d871e1.js
docs/search.index/desc/: 6d2cf597db7a.js
docs/search.index/entry/: 41ba0ff09558.js
docs/search.index/function/: ab986cf672a3.js
docs/search.index/generic_inverted_index/: e39c689b3401.js
docs/search.index/name/: cb366e1487bd.js
docs/search.index/normalizedName/: 87efe87cad38.js
docs/search.index/path/: 01aa24a1ea57.js
docs/search.index/type/: 888069e0dc81.js
docs/src/nolan/: jets.rs.html  lib.rs.html  traits.rs.html
docs/src/nolan/impls/: f64_traits.rs.html  jet_math.rs.html  jet_ops.rs.html  jet_traits.rs.html  mod.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
src/: angles.rs  differentiate.rs  grids.rs  jets.rs  lib.rs  parameters.rs  state.rs  traits.rs
src/impls/: f64_traits.rs  jet_math.rs  jet_ops.rs  jet_traits.rs  mod.rs
src/linalg/: generic.rs  mat3.rs  mat6.rs  mat9.rs  mod.rs  regularize.rs  vec3.rs
src/optimization/: mod.rs  nlls.rs
src/statistics/: distributions.rs  mod.rs  multivariate.rs
tests/: test_linalg.rs  test_polynomials.rs  test_trigonometry.rs
(+10 files in other folders)
