[package]
name = "nolan"
version = "1.1.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Joachim Moeyens <joachim@empyrean-dynamics.com>", "Empyrean Dynamics"]
description = "Const-generic hyperdual numbers for automatic differentiation"
repository = "https://github.com/Empyrean-Dynamics/nolan"
include = ["src/**/*", "Cargo.toml", "docs/katex-header.html"]

[lib]
name = "nolan"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/katex-header.html"]

[dev-dependencies]
rusty-hook = "^0.11.2"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark_jets"
harness = false
