[package]
name = "hyperjet"
version = "1.8.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Joachim Moeyens <joachim@empyrean-dynamics.com>", "Empyrean Dynamics"]
description = "Forward-mode automatic differentiation with const-generic, stack-allocated first-, second-, and third-order jets (Jet1/Jet2/Jet3) for gradients, Hessians, and third-order tensors"
homepage = "https://www.empyrean-dynamics.com"
documentation = "https://docs.rs/hyperjet"
repository = "https://github.com/Empyrean-Dynamics/nolan"
license = "BSD-3-Clause"
keywords = ["autodiff", "dual-numbers", "hyperdual", "jets", "forward-mode"]
categories = ["mathematics", "science", "algorithms"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "docs/katex-header.html"]

[lib]
name = "hyperjet"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/katex-header.html"]

[dev-dependencies]
rusty-hook = "^0.11.2"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark_jets"
harness = false

[[bench]]
name = "benchmark_linalg"
harness = false

[[bench]]
name = "benchmark_statistics"
harness = false
